# ironframe

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  tailwind.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/generator/: Cargo.toml
crates/generator/src/: lib.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs
docs/: scanner.md
src/: config.rs  generator.rs  lib.rs  main.rs  preflight.css  properties_definitions.css  properties_fallback.css  scanner.rs
tests/fixtures/complex_parity/: app.css  complex.html  tailwind.css
