[package]
name = "ironframe"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/finitefield-org/tailwind-rust"
homepage = "https://github.com/finitefield-org/tailwind-rust"
readme = "README.md"
description = "Rust implementation aiming for Tailwind CSS v4.1-equivalent functionality."

[lib]
name = "ironframe"
path = "src/lib.rs"

[[bin]]
name = "ironframe"
path = "src/main.rs"

[dependencies]
globset = "0.4"
ignore = "0.4"
notify = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
