[package]
name = "tailwind_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
tailwind_scanner = { path = "../scanner" }
tailwind_config = { path = "../config" }
tailwind_generator = { path = "../generator" }
notify = "6"
globset = "0.4"
