[package]
name = "ironframe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[[bin]]
name = "ironframe"
path = "src/main.rs"

[dependencies]
ironframe_scanner = { path = "../scanner" }
ironframe_config = { path = "../config" }
ironframe_generator = { path = "../generator" }
notify = "6"
globset = "0.4"
